# cuetie

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: docker.yml  release.yml
cuetie/: __init__.py  __main__.py  cue_parser.py  ffmpeg_check.py  processor.py
cuetie/ui/: main_window.py  track_detail.py  workers_panel.py
docker/: Dockerfile  nginx.conf  run-cuetie.sh  supervisord.conf
packaging/: cuetie.spec  cuetie_launcher.py  runtime_hook_gtk.py
