[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cuetie"
version = "0.1.0"
description = "GTK3 CUE sheet splitter with full metadata, cover art, and track picker"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "mutagen>=1.45.0",
    "charset-normalizer>=3.0.0",
]

[project.scripts]
cuetie = "cuetie.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cuetie*"]
